--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <html>
     <head>
         <title>PersonalBlog</title>
+        <script src="./styles.js"></script>
     </head>
     <body>
-         <h1>Hello world!</h1>
+         <my-app>Loading...</my-app>
+         <script src="./app.js"></script>
     </body>
 </html>
