added structure for future client app

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <base href="/">
         <title>PersonalBlog</title>
         <script src="./styles.js"></script>
     </head>
