changed file structures

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,9 @@
     <head>
         <base href="/">
         <title>PersonalBlog</title>
-        <script src="./styles.js"></script>
     </head>
     <body>
-         <my-app>Loading...</my-app>
+        loading...
          <script src="./app.js"></script>
     </body>
 </html>
